infrastructure/kubernetes/tendersbay-xyz/platform/main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-svc
  namespace: tendersbay-xyz
spec:
  type: NodePort
  selector:
    app: tendersbay-xyz
    tier: platform
  ports:
    - port: 30080
      targetPort: 8080
      protocol: TCP
